--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -1,5 +1,4 @@
 // global application styles
-
 a {
   cursor: pointer;
 }
@@ -964,4 +963,9 @@ a {
 
 .borderd-content .content {
   padding: 10px;
+}
+
+
+.pagination {
+  margin: 2px 1px !important;
 }
