--- a/src/app/_component/credential/credential-list/credential-list.component.html
+++ b/src/app/_component/credential/credential-list/credential-list.component.html
@@ -53,18 +53,29 @@
         margin-top: 0;
         margin-bottom: 1rem;
     }
+
+    table {
+        table-layout: fixed;
+    }
+    
+    .scrollable {
+        overflow: scroll; overflow-y:hidden;
+    } 
+
+    .pagination {
+        margin: 1px 0 !important;
+    }
 </style>
 
 <div class="row gutters-sm">
     <div class="col-lg-12">
-        <div class="panel">
-            <div class="panel-heading" style="border-bottom: 1px solid #eee;">
+        <div class="card mb-3">
+            <div class="card-body">
                 <div class="row">
-                    <div class="col-lg-6" 
-                        style="text-align: start;margin-top: 2px;font-size: large;">
-                        {{title}}
+                    <div class="col-lg-8">
+                        <h5 class="card-title" style="font-size: large;">My Credentials</h5>
                     </div>
-                    <div class="col-lg-6" style="text-align: end;">
+                    <div class="col-lg-4" style="text-align: end;margin-top: 5px;">
                         <button *ngIf="refreshButton && refreshButton.active" type="button"
                             class="form-control input-sm" 
                             style="width: auto;display: inline;margin-right: 7px;"
@@ -76,60 +87,21 @@
                             class="form-control input-sm"
                             style="width: auto; background: #cb0f43; color: white;
                                 display: inline;margin-right: 7px;" 
-                             data-toggle="modal" data-target="#lookupDatas"
-                            (click)="addLookupDatas()">
+                            (click)="addCredentail()">
                             <span class="glyphicon glyphicon-plus-sign"></span>
                             {{addButton.title}}
                         </button>
-                        <div *ngIf="dropdownButton && dropdownButton.active" 
-                            class="dropdown" style="display: inline;">
-                            <button class="btn btn-primary dropdown-toggle"
-                                style="padding: 4px 5px;border-radius: 3px;background: #4750b6;"                
-                                type="button" data-toggle="dropdown">{{dropdownButton.title}}
-                                <span class="caret"></span></button>
-                            <ul class="dropdown-menu" style="left: -38px;">
-                                <li *ngFor="let menu of dropdownButton.menus">
-                                    <a (click)="menuAction(menu)">{{menu.title}}</a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="panel-body" *ngIf="parentLookupDate">
-                <div class="row" style="font-size: small;font-style: normal;">
-                    <div class="col-lg-3">
-                        <label for="html">LookupType</label><br>
-                        <label for="html">{{parentLookupDate?.lookupType}}</label><br>
-                    </div>
-                    <div class="col-lg-3">
-                        <label for="html">LookupValue</label><br>
-                        <label for="html">{{parentLookupDate?.lookupValue}}</label><br>
-                    </div>
-                    <div class="col-lg-4">
-                        <label for="html">Description</label><br>
-                        <label for="html">{{parentLookupDate?.description}}</label><br>
-                    </div>
-                    <div class="col-lg-2">
-                        <label for="html">DateCreated</label><br>
-                        <label for="html">{{parentLookupDate?.dateCreated | date: 'dd/MM/yyyy' }}</label><br>
-                    </div>
-                </div>                
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-12">
-        <div class="card mb-3">
-            <div class="card-body">
-                <div class="row">
                     <div class="col-lg-12">
-                        <div class="form-group">
-                            <label for="lookupDatas" *ngIf="lookupDatas">
-                                Total Lookup ({{lookupDatas.length}})
+                        <hr style="margin-top: 10px;">
+                        <div class="form-group" *ngIf="credentialDatas">
+                            <label for="credentailListLength">
+                                Total Credential ({{credentialDatas.length}})
                             </label>
-                            <input type="text" id="lookupDatasSearch" 
+                            <input type="text" id="searchCredentail" 
                                 class="form-control input-sm"
-                                style="width: 30%;" [(ngModel)]="searchLookup"
+                                style="width: 30%;"
+                                [(ngModel)]="searchCredentail"
                                 placeholder="Search by any key" />
                         </div>
                     </div>
@@ -138,37 +110,42 @@
                     table-bordered table-sm" style="font-size: 12px;">
                     <thead>
                         <tr>
+                            <th style="width: 4%;">-</th>
                             <th style="width: 4%;"># No</th>
-                            <th>Lookup Type</th>
-                            <th>Lookup Value</th>
-                            <th>Description</th>
+                            <th>Name</th>
+                            <th style="width: 12%;">Type</th>
                             <th style="width: 8%;">Created Date</th>
                             <th style="width: 6%;">Action</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let lookupData of pageOfLookupData | searchFilter: searchLookup; let i = index">
-                            <td>{{lookupData.lookupId}}</td>
-                            <td>{{lookupData.lookupType}}</td>
-                            <td>{{lookupData.lookupValue}}</td>
-                            <td>{{lookupData.description}}</td>
+                        <tr *ngFor="let credential of pageOfCredentials | searchFilter: searchCredentail; let i = index">
                             <td style="text-align: center;">
-                                {{lookupData.dateCreated | date: 'yyyy-MM-dd'}}
+                                <div class="Yf">
+                                    <div [ngClass]="{
+                                        'Yg_inactive' : credential.status.lookupValue === 0,
+                                        'Yg_active' : credential.status.lookupValue === 1,
+                                        'Yg_delete': credential.status.lookupValue === 2
+                                    }"></div>
+                                </div>
                             </td>
+                            <td>{{credential.credentialId}}</td>
+                            <td>{{credential.credentialName}}</td>
+                            <td style="text-align: center;">{{credential.credentialType?.description}}</td>
+                            <td style="text-align: center;">{{credential.dateCreated | date: 'yyyy-MM-dd'}}</td>
                             <td style="text-align: center;">
                                 <div class="btn-group btn-group-xs" role="group"
                                     style="text-align: center">
                                     <button type="button" class="btn btn-default"
-                                        data-toggle="modal" data-target="#lookupDatas"
-                                        (click)="editLookupData(lookupData)">
+                                        (click)="editAction(credential)">
                                         <span class="glyphicon glyphicon-edit"
                                             style="color:blue"></span>
                                     </button>
                                     <button type="button" class="btn btn-default"
                                         data-toggle="modal" data-target="#deleteAction"
-                                        (click)="deleteLookupData(lookupData, i)">
+                                        (click)="deleteCredentail(credential, i)">
                                         <span class="glyphicon glyphicon-trash"
-                                            style="color: #dc3545;"></span>
+                                            style="color:#dc3545"></span>
                                     </button>
                                 </div>
                             </td>
@@ -177,23 +154,16 @@
                     <tfoot>
                         <tr>
                             <td colspan="6" style="text-align: center;padding-bottom: 0px;">
-                                <jw-pagination [items]="lookupDatas" [pageSize]="10" 
+                                <jw-pagination [items]="credentialDatas" [pageSize]="20" 
                                     (changePage)="onChangePage($event)"></jw-pagination>
                             </td>
-                        </tr>
+                          </tr>
                     </tfoot>
                 </table>
             </div>
         </div>
     </div>
 </div>
-<!-- lookup detai -->
-<cu-lookup *ngIf="lookupAction"
-    [lookUpAction]="lookupAction"
-    [recivedLookupData]="lookupData"
-    (senderEvent) = "resetEvent($event)">
-</cu-lookup >
-<!-- data-toggle="modal" data-target="#deleteAction" -->
 <div class="modal fade" id="deleteAction"
     role="dialog" style="top: 85px;">
     <del-box
