--- a/src/app/_component/stt-setting/cu-stt/cu-stt.component.html
+++ b/src/app/_component/stt-setting/cu-stt/cu-stt.component.html
@@ -104,10 +104,11 @@
                         <div class="col-lg-4" *ngIf="taskTypeOption">
                             <div class="form-group">
                                 <label for="taskType">TaskType</label>
-                                <select class="form-control input-sm" id="taskType" formControlName="taskType"
+                                <select class="form-control input-sm" id="taskType"
+                                    formControlName="taskType"
                                     [ngClass]="{ 'is-invalid': submitted && f.taskType.errors }"
-                                    (change)='onTaskTypeSelected($event)'
-                                    [attr.disabled]="action === 2 ? true : true">
+                                    [attr.disabled]="action === 2 ? true : null"
+                                    (change)='onTaskTypeSelected($event)'>
                                     <!-- true -> null for 2nd value -->
                                     <option hidden value="" disabled selected>
                                         {{taskTypeOption.parentLookupData.description}}
@@ -121,6 +122,43 @@
                                         style="color: red;">TaskType is required
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group" *ngIf="homePageOption">
+                                <label for="homePage">HomePage</label>
+                                <select class="form-control input-sm"
+                                    id="homePage" formControlName="homePage">
+                                    <option hidden value="" disabled selected>
+                                        {{homePageOption.parentLookupData.description}}
+                                    </option>
+                                    <option *ngFor="let homePage of homePageOption.subLookupData"
+                                        [value]="homePage.lookupType">{{homePage.description}}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label for="serviceId">Service Id</label>
+                                <input type="text" id="serviceId" maxlength="10"
+                                    formControlName="serviceId"
+                                    class="form-control input-sm"
+                                    placeholder="Enter Service Id"/>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group" *ngIf="credentailOption">
+                                <label for="credentialId">Credential</label>
+                                <select class="form-control input-sm"
+                                    id="credentialId" formControlName="credentialId">
+                                    <option hidden value="" disabled selected>
+                                        Select Credentail
+                                    </option>
+                                    <option *ngFor="let credential of credentailOption"
+                                        [value]="credential.credentialId">{{credential.credentialName}}
+                                    </option>
+                                </select>
                             </div>
                         </div>
                         <div class="col-lg-4" *ngIf="action === 2">
@@ -210,26 +248,6 @@
                                         style="color: red;">Request method is required
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="form-group">
-                                <label for="apiSecurityLkValue">Security Key</label>
-                                <input type="text" id="apiSecurityLkValue" maxlength="255"
-                                    formControlName="apiSecurityLkValue"
-                                    (input)="onChangeSecurityLkValue($event.target.value)"
-                                    class="form-control input-sm"
-                                    placeholder="Enter Lookup Key" />
-                            </div>
-                        </div>
-                        <div class="col-lg-12" *ngIf="hasKey">
-                            <div class="form-group">
-                                <label for="apiSecurityLkDetail">Security Value</label>
-                                <textarea type="text" rows="10"
-                                    id="apiSecurityLkDetail"
-                                    formControlName="apiSecurityLkDetail"
-                                    [ngModel]="securityLkDetail | json"
-                                    class="form-control input-sm" disabled></textarea>
                             </div>
                         </div>
                     </div>
