--- a/src/app/_component/stt-setting/cu-sttc/cu-sttc.component.html
+++ b/src/app/_component/stt-setting/cu-sttc/cu-sttc.component.html
@@ -221,17 +221,26 @@
                                     (input)="onChangeFiledLkValue($event.target.value)"/>
                             </div>
                         </div>
-                        <div class="col-lg-12" *ngIf="hasKey">
-                            <div class="form-group">
-                                <label for="filedLkDetail">Security Value</label>
-                                <textarea type="text" rows="10"
-                                    id="filedLkDetail"
-                                    formControlName="filedLkDetail"
-                                    [ngModel]="filedLkValueOption | json"
-                                    class="form-control input-sm" disabled></textarea>
+                        <!-- disabled -->
+                        <div class="col-lg-4">
+                            <div class="form-group" *ngIf="defultOption">
+                                <label for="sttcDisabled">Disabled</label>
+                                <select id="sttcDisabled" class="form-control input-sm"
+                                    formControlName="sttcDisabled"
+                                    [ngClass]="{ 'is-invalid': submitted && f.sttcDisabled.errors }">
+                                    <option hidden value="" disabled selected>
+                                        {{defultOption.parentLookupData.description}}
+                                    </option>
+                                    <option *ngFor="let defultOpt of defultOption.subLookupData"
+                                        [value]="defultOpt.lookupValue">{{defultOpt.description}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.sttcDisabled.errors" class="invalid-feedback">
+                                    <div *ngIf="f.sttcDisabled.errors.required" style="color: red;">
+                                        Disabled is required</div>
+                                </div>
                             </div>
                         </div>
-                        <!-- mandatory -->
                         <div class="col-lg-4" *ngIf="mandatoryOption">
                             <div class="form-group">
                                 <label for="mandatory">Required</label>
@@ -276,12 +285,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4" *ngIf="action === 2">
-                            <div class="form-group" *ngIf="defultOption">
-                                <label for="defaultSttc">Default</label>
-                                <select id="defaultSttc" class="form-control input-sm"
-                                    formControlName="defaultSttc"
-                                    [ngClass]="{ 'is-invalid': submitted && f.defaultSttc.errors }">
+                        <div class="col-lg-4">
+                            <div class="form-group" *ngIf="defultOption && action === 2">
+                                <label for="sttcDefault">Default</label>
+                                <select id="sttcDefault" class="form-control input-sm"
+                                    formControlName="sttcDefault"
+                                    [ngClass]="{ 'is-invalid': submitted && f.sttcDefault.errors }">
                                     <option hidden value="" disabled selected>
                                         {{defultOption.parentLookupData.description}}
                                     </option>
@@ -289,12 +298,23 @@
                                         [value]="defultOpt.lookupValue">{{defultOpt.description}}
                                     </option>
                                 </select>
-                                <div *ngIf="submitted && f.defaultSttc.errors" class="invalid-feedback">
+                                <div *ngIf="submitted && f.sttcDefault.errors" class="invalid-feedback">
                                     <div *ngIf="f.defaultSttc.errors.required" style="color: red;">
                                         Default is required</div>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-12">
+                            <div class="form-group" *ngIf="hasKey">
+                                <label style="color: #cb0f43;">*Filed LK-Value</label>
+                                <ul class="list-group" *ngIf="filedLkValueOption">
+                                    <li class="list-group-item" style="padding: 5px 15px;"
+                                        *ngFor="let filedLkValue of filedLkValueOption.subLookupData">
+                                        {{filedLkValue.description}}
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>                    
                     </div>
                 </div>
             </div>
