--- a/src/app/_component/stt-setting/sttc-link-stts/sttc-link-stts.component.html
+++ b/src/app/_component/stt-setting/sttc-link-stts/sttc-link-stts.component.html
@@ -2,7 +2,38 @@
     [searchSttcId]="querySttcid"
     [formTitle]="formTitle">
 </view-sttc>
-
+<div class="row" style="margin-top: 20px;">
+    <div class="col-lg-6">
+        <label>
+            Total {{formTitle}} ({{sttcLinkSTTSList.length}})
+        </label>
+        <input type="text" id="searchValue"
+            class="form-control input-sm" 
+            style="width: 60%;"
+            [(ngModel)]="searchValue"
+            placeholder="Search by any key" />
+    </div>
+    <div class="col-lg-6" style="text-align: end;margin-top: 25px;">
+        <!-- working -->
+        <button *ngIf="refreshButton && refreshButton.active"
+            type="button" class="form-control input-sm"
+            style="width: auto;display: inline;margin-right: 7px;"
+            (click)="refreshAction()">
+            <span class="glyphicon glyphicon-refresh"></span>
+            {{refreshButton.title}}
+        </button>
+        <!-- working -->
+        <button *ngIf="addButton && addButton.active" type="button"
+            class="form-control input-sm"
+            style="width: auto; background: #cb0f43;color: white;
+            display: inline;margin-right: 7px;"
+            data-toggle="modal" data-target="#addAction"
+            (click)="addAction()">
+            <span class="glyphicon glyphicon-plus-sign"></span>
+            {{addButton.title}}
+        </button>
+    </div>
+</div>
 <table id="stt" style="font-size: 12px;margin-top: 10px;"
     class="table table-responsive table table-striped table-bordered table-sm">
     <thead>
@@ -35,10 +66,13 @@
                 {{sttcLinkSTTS.sttsId}}
             </td>
             <td style="text-align: center;">
-                {{sttcLinkSTTS.sttsOrder.description}}
+                {{sttcLinkSTTS.sttsOrder}}
             </td>
             <td style="text-align: center;">
                 {{sttcLinkSTTS.sttsName}}
+            </td>
+            <td style="text-align: center;">
+                {{sttcLinkSTTS.sttsDefault.description}}
             </td>
             <td style="text-align: center;">
                 {{sttcLinkSTTS.dateCreated | date:'dd-MM-yyyy'}}
@@ -48,6 +82,7 @@
                     role="group" style="text-align: center">
                     <button type="button" class="btn btn-default"
                         data-toggle="modal" data-target="#deleteAction"
+                        [disabled]="sttcLinkSTTS.status.lookupValue === 0"
                         (click)="deleteAction(sttcLinkSTTS)">
                         <span class="glyphicon glyphicon-trash" 
                             style="color: #dc3545;"></span>
@@ -80,7 +115,7 @@
             <div class="modal-body">
                 <form [formGroup]="sttcLinkSttsForm" (ngSubmit)="onSubmit()">
                     <div class="row">
-                        <div class="col-lg-10" *ngIf="sttSections">
+                        <div class="col-lg-10" *ngIf="sttSectionList">
                             <div class="form-group">
                                 <select class="form-control input-sm" id="sttsId"
                                     formControlName="sttsId"
@@ -88,8 +123,8 @@
                                     <option hidden value="" disabled selected>
                                         Select STTS
                                     </option>
-                                    <option *ngFor="let sttSection of sttSections.reverse()"
-                                        [value]="sstForm.sttsId">{{sttSection.sttsName}}
+                                    <option *ngFor="let sttSection of sttSectionList.reverse()"
+                                        [value]="sttSection.sttsId">{{sttSection.sttsName}}
                                     </option>
                                 </select>
                                 <div *ngIf="submitted && f.sttsId.errors" class="invalid-feedback">
