--- a/src/app/_component/stt-setting/sttf-list/sttf-list.component.html
+++ b/src/app/_component/stt-setting/sttf-list/sttf-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-6">
-        <label *ngIf="sstForms">
-            Total STTF ({{sstForms.length}})
+        <label *ngIf="sstFormList">
+            Total STTF ({{sstFormList.length}})
         </label>
         <input type="text" id="searchSTTF"
             class="form-control input-sm" 
@@ -45,17 +45,17 @@
         <tr>
             <th style="width: 4%;">-</th>
             <th style="width: 4%;"># No</th>
-            <th>Form Type</th>
             <th>Form Name</th>
+            <th>Form Type</th>
             <th>Defult</th>
             <th>Created Date</th>
-            <th>Total STT</th>
-            <th>Total Section</th>
+            <th>STTs</th>
+            <th>Sections</th>
             <th style="width: 10%;">Action</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let sstForm of sstForms | searchFilter: searchSTTF; let i = index">
+        <tr *ngFor="let sstForm of pageOfSSTs | searchFilter: searchSTTF; let i = index">
             <td style="text-align: center;">
                 <div class="Yf">
                     <div [ngClass]="{
@@ -66,16 +66,10 @@
                 </div>
             </td>
             <td>{{sstForm.sttfId}}</td>
+            <td>{{sstForm.sttfName}}</td>
             <td style="text-align: center;">
                 {{sstForm.formType.description}}
-                <!-- <span class="badge"
-                    [ngClass]="{
-                        'badge-query-form' : sstForm.formType.lookupValue === 0,
-                        'badge-service-form' : sstForm.formType.lookupValue === 1
-                    }">
-                </span> -->
             </td>
-            <td>{{sstForm.sttfName}}</td>
             <td style="text-align: center;">
                 {{sstForm.sttfDefault.description}}
             </td>
@@ -99,7 +93,7 @@
                     <!-- add the method for delete the queue detail -->
                     <button type="button" class="btn btn-default"
                        data-toggle="modal" data-target="#deleteAction"
-                       [disabled]="sstForm.status.lookupValue === 2"
+                       [disabled]="sstForm.status.lookupValue === 0"
                        (click)="deleteAction(sstForm)">
                         <span class="glyphicon glyphicon-trash"
                             style="color: #dc3545;"></span>
@@ -108,9 +102,9 @@
                     <button type="button"
                         class="btn btn-default dropdown-toggle" 
                         data-toggle="dropdown"
-                        [disabled]="sstForm.status.lookupValue === 2">
-                        <span class="glyphicon glyphicon-cog" 
-                        style="color: black;"></span>
+                        [disabled]="sstForm.status.lookupValue === 0">
+                        <span class="glyphicon glyphicon-hand-right"
+                            style="color:#a94442"></span>
                     </button>
                     <ul class="dropdown-menu" style="left: -100px;">
                         <li *ngFor="let menu of actionMenu">
@@ -124,6 +118,14 @@
             </td>
         </tr>
     </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="9" style="text-align: center;padding-bottom: 0px;">
+                <jw-pagination [items]="sstFormList" [pageSize]="25" 
+                    (changePage)="onChangePage($event)"></jw-pagination>
+            </td>
+        </tr>
+    </tfoot>
 </table>
 <div class="modal fade" id="deleteAction"
     role="dialog" style="top: 85px;">
