--- a/src/app/_component/stt-setting/stts-list/stts-list.component.html
+++ b/src/app/_component/stt-setting/stts-list/stts-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-6">
-        <label *ngIf="sttSections">
-            Total STTS ({{sttSections.length}})
+        <label *ngIf="sttSectionList">
+            Total STTS ({{sttSectionList.length}})
         </label>
         <input type="text" id="searchSTTS"
             class="form-control input-sm" 
@@ -50,18 +50,17 @@
         <tr>
             <th style="width: 4%;">-</th>
             <th style="width: 4%;"># No</th>
-            <th>Order</th>
             <th>Section Name</th>
+            <th>Order</th>
             <th>Defult</th>
             <th>Created Date</th>
-            <th>Total STT</th>
-            <th>Total Form</th>
-            <th>Total Control</th>
+            <th>Forms</th>
+            <th>Controls</th>
             <th style="width: 10%;">Action</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let sttSection of sttSections | searchFilter: searchSTTS; let i = index">
+        <tr *ngFor="let sttSection of pageOfSttSections | searchFilter: searchSTTS; let i = index">
             <td style="text-align: center;">
                 <div class="Yf">
                     <div [ngClass]="{
@@ -72,18 +71,15 @@
                 </div>
             </td>
             <td>{{sttSection.sttsId}}</td>
+            <td>{{sttSection.sttsName}}</td>
             <td style="text-align: center;">
                 {{sttSection.sttsOrder}}
             </td>
-            <td>{{sttSection.sttsName}}</td>
             <td style="text-align: center;">
                 {{sttSection.sttsDefault.description}}
             </td>
             <td style="text-align: center;">
                 {{sttSection.dateCreated | date:'dd-MM-yyyy'}}
-            </td>
-            <td style="text-align: center;">
-                {{sttSection.totalSTT}}
             </td>
             <td style="text-align: center;">
                 {{sttSection.totalForm}}
@@ -102,7 +98,7 @@
                     <!-- add the method for delete the queue detail -->
                     <button type="button" class="btn btn-default"
                         data-toggle="modal" data-target="#deleteAction"
-                        [disabled]="sttSection.status.lookupValue === 2"
+                        [disabled]="sttSection.status.lookupValue === 0"
                         (click)="deleteAction(sttSection)">
                         <span class="glyphicon glyphicon-trash"
                         style="color: #dc3545;"></span>
@@ -111,9 +107,9 @@
                     <button type="button"
                         class="btn btn-default dropdown-toggle" 
                         data-toggle="dropdown"
-                        [disabled]="sttSection.status.lookupValue === 2">
-                        <span class="glyphicon glyphicon-cog" 
-                        style="color: black;"></span>
+                        [disabled]="sttSection.status.lookupValue === 0">
+                        <span class="glyphicon glyphicon-hand-right"
+                            style="color:#a94442"></span>
                     </button>
                     <ul class="dropdown-menu" style="left: -100px;">
                         <li *ngFor="let menu of actionMenu">
@@ -127,6 +123,14 @@
             </td>
         </tr>
     </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="12" style="text-align: center;padding-bottom: 0px;">
+                <jw-pagination [items]="sttSectionList" [pageSize]="25" 
+                    (changePage)="onChangePage($event)"></jw-pagination>
+            </td>
+        </tr>
+    </tfoot>
 </table>
 <div class="modal fade" id="deleteAction"
     role="dialog" style="top: 85px;">
