--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -552,9 +552,9 @@ td {
   background-color: green;
 }
 
-.badge-pcomplate {
+.badge-interrupt {
   color: #fff;
-  background-color: greenyellow;
+  background-color: rgb(141, 177, 25);
 }
 
 .badge-primary {
