--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -552,9 +552,14 @@ td {
   background-color: green;
 }
 
+.badge-start {
+  color: #fff;
+  background-color: rgb(102, 20, 210);
+}
+
 .badge-interrupt {
   color: #fff;
-  background-color: rgb(141, 177, 25);
+  background-color: orange;
 }
 
 .badge-primary {
